# qs-parser

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
qs_parser/: parser.py  query_key_detail.py  query_params.py
tests/: test_parser.py  test_query_key_detail.py  test_query_param.py  test_query_params.py
