[tool.poetry]
name = "qs-parser"
version = "0.1.0"
description = ""
authors = ["Quentin Ysambert <quentin.ysambert@gmail.com>"]
readme = "README.md"
packages = [{include = "qs_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
mypy = "^1.4.1"
black = "^23.7.0"
flake8-bandit = "^4.1.1"
safety = "^2.3.5"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
flake8-annotations = "^3.0.1"
darglint = "^1.8.1"
xdoctest = "^1.1.1"
isort = "^5.12.0"
coverage = {extras = ["toml"], version = "^7.2.7"}
pyupgrade = "^3.10.1"
conventional-pre-commit = "^2.3.0"

[tool.coverage.run]
branch = true
source = ["qs_parser"]

[tool.coverage.report]
show_missing = true
fail_under = 100
include_namespace_packages = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
force_single_line = true
lines_after_imports = 2

[tool.mypy]
packages = ["qs_parser", "tests"]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
